# FlashVID

./: .gitignore  .gitmodules  FlashVID_method_analysis.md  README.md  argument.md  check_env.py  pyproject.toml  run_eval.sh  run_llava15_mme.sh  run_llava15_sqa.sh
.claude/: settings.local.json
.log/: codex-20260417-111549.md  codex-20260419-220323.md  codex-20260420-144637.md  codex-20260420-144943.md  codex-20260421-115903.md  codex-20260421-163904.md
assets/: videomme.jsonl
code/: pull_attn_sink.sh  run_llava_sink_analysis.sh  run_llava_sink_analysis_10pct.sh
flashvid/: __init__.py  configuration_flashvid.py  llava_arch.py  modeling_qwen2.py  modeling_qwen2_5_vl.py  modeling_qwen3_vl.py  siglip_encoder.py  token_selection.py  utils.py
flashvid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llava/: conversation.py
playground/: bench_efficiency.py  internvl_hf_mmtok_local.py  llava_onevision_mmtok_local.py  llava_ov_infer.py  llava_vid_infer.py  qwen2_5_vl.py  qwen3_vl.py  qwen3_vl_mmtok_local.py  qwen3_vl_ours_v2_local.py  qwen3_vl_ours_v3_compare.py
scripts/: download_llava_1_5.sh  internvl_hf_mmtok_img.sh  internvl_hf_mmtok_video.sh  llava_mmtok.sh  llava_onevision1_5_video.sh  llava_onevision_mmtok_img.sh  llava_onevision_mmtok_video.sh  llava_onevision_pca_compare_img.sh  llava_ov.sh  llava_vid.sh  pull_main.sh  qwen2_5_vl.sh  qwen2_5_vl_mmtok.sh  qwen2_5_vl_ours.sh  qwen2_5_vl_random.sh  qwen3_vl.sh  qwen3_vl_mmtok_img.sh  qwen3_vl_mmtok_video.sh  qwen3_vl_pca_compare_img.sh  qwen3_vl_random_img.sh  qwen3_vl_random_video.sh  run.sh  (+1 more)
(+220 files in other folders)
